cached schemas catalog called directly

--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,7 @@
                         </transformationSet>
 					</transformationSets>
 					<catalogs>
+						<catalog>schemas/cached/catalog.xml</catalog>
 						<catalog>schemas/catalog.xml</catalog>
 					</catalogs>
 				</configuration>
